# math-utils

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  Euler321_8cpp.html  Euler321_8cpp__incl.map  Euler321_8cpp__incl.md5  Euler321_8cpp_source.html  Euler321_8h.html  Euler321_8h__dep__incl.map  Euler321_8h__dep__incl.md5  Euler321_8h__incl.map  Euler321_8h__incl.md5  Euler321_8h_source.html  GeoCoord_8cpp.html  GeoCoord_8cpp__incl.map  GeoCoord_8cpp__incl.md5  GeoCoord_8cpp_source.html  GeoCoord_8h.html  GeoCoord_8h__dep__incl.map  GeoCoord_8h__dep__incl.md5  GeoCoord_8h__incl.map  GeoCoord_8h__incl.md5  GeoCoord_8h_source.html  GeoCoord_8hpp_source.html  GeoType_8cpp.html  GeoType_8cpp_source.html  GeoType_8hpp.html  GeoType_8hpp_source.html  LICENSE  Matrix_8h.html  Matrix_8h__dep__incl.map  Matrix_8h__dep__incl.md5  Matrix_8h__incl.map  Matrix_8h__incl.md5  Matrix_8h_source.html  Quaternion_8cpp.html  (+231 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: contributing.md
.github/workflows/: build-devcontainer.yml  build-test-full.yml  build-test-main.yml  build-test-release.yml  build-test.yml  doxygen.yml  pre-commit.yml  static-analysis.yml
docs/: Doxyfile  Doxyfile.bak
include/: acos_safe.h  asin_safe.h  constants.h  conversions.h  float_equality.h  range_constrain.h  sqrt_safe.h  wrap_2pi.h  wrap_pi.h
include/Attitude/: Attitude.h  Euler321.h  Quaternion.h  QuaternionMath.h  QuaternionOperators.h  dcm_to_euler.h  dcm_to_quaternion.h  euler321_to_dcm.h  euler_to_dcm.h  quaternion_derivative.h  quaternion_rotate.h  quaternion_to_dcm.h  quaternion_to_euler.h
include/Geodesy/: GeoCoord.h  ecef_to_lla.h  geodetic_to_geocentric.h  lla_to_ecef.h
include/Internal/: error_msg_helpers.h
include/LinAlg/: LinAlg.h  Matrix.h  Quaternion.h  Vector.h  VectorMath.h  VectorOperators.h
scripts/: build-debug.sh  build-release.sh  constants.py  coverage.sh  debug-build.sh  gen-doxygen.sh  run-clang-tidy.sh  run-coverage.sh  run-cppcheck.sh  run-pmccabe.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+34 more)
src/: CMakeLists.txt  acos_safe.cpp  asin_safe.cpp  constants.hpp  conversions.hpp  wrap_2pi.cpp  wrap_pi.cpp
src/Attitude/: Euler321.cpp  Quaternion.cpp  QuaternionMath.cpp  QuaternionOperators.cpp  dcm_to_euler.cpp  dcm_to_quaternion.cpp  euler321_to_dcm.cpp  euler_to_dcm.cpp  quaternion_derivative.cpp  quaternion_rotate.cpp  quaternion_to_dcm.cpp  quaternion_to_euler.cpp
src/Geodesy/: GeoCoord.cpp  ecef_to_lla.cpp  geodetic_to_geocentric.cpp  lla_to_ecef.cpp
src/LinAlg/: VectorMath.cpp
src/geodesy/: CMakeLists.txt  EGM2008Ellipsoid.cpp  EGM2008Ellipsoid.hpp  GeoCoord.cpp  GeoCoord.hpp  GeoType.cpp  GeoType.hpp  PlanetEllipsoidObject.hpp  ecefToGeocentric.cpp  ecefToGeocentric.hpp  ecefToGeodetic.cpp  ecefToGeodetic.hpp
src/math/: CMakeLists.txt  Euler321.cpp  Euler321.hpp  Matrix.hpp  Matrix3.hpp  Quaternion.cpp  Quaternion.hpp  Vector.h  Vector.hpp  Vector3.hpp  acos_safe.hpp  asin_safe.hpp  clamp.hpp  crossProductMatrix.cpp  crossProductMatrix.hpp  dcmToEuler321.cpp  dcmToEuler321.hpp  errorQuaternion.cpp  errorQuaternion.hpp  floatEquality.hpp  quaternionToDCM.cpp  quaternionToDCM.hpp  quaternionToRotMatrix.cpp  quaternionToRotMatrix.hpp  rangeConstrain.hpp  range_constrain.hpp  safeArccos.hpp  safeArcsin.hpp  safeSqrt.hpp  sgn.hpp  wrap180.hpp  wrap2pi.hpp  wrap360.hpp  wrapPi.hpp
test/: CMakeLists.txt  angle_wrappers_test.cpp  float_equality_test.cpp  range_constrain_test.cpp  safe_trig_test.cpp  sqrt_safe_test.cpp  test_angle_wrappers.cpp  test_float_equality.cpp  test_safe_trig.cpp
test/Attitude/: CMakeLists.txt  Euler321_test.cpp  QuaternionOperators_test.cpp  Quaternion_test.cpp  dcm_to_euler_test.cpp  dcm_to_quaternion_test.cpp  euler321_to_dcm_test.cpp  euler_to_dcm_test.cpp  quaternion_rotate_test.cpp  quaternion_to_dcm_test.cpp  quaternion_to_euler_test.cpp  test_Quaternion.cpp  test_QuaternionMath.cpp  test_QuaternionOperators.cpp  test_dcm_to_quaternion.cpp  test_quaternion_rotate.cpp  test_quaternion_to_dcm.cpp
test/Geodesy/: CMakeLists.txt  GeoCoord_test.cpp  ecef_to_lla_test.cpp  geodetic_to_geocentric_test.cpp  lla_to_ecef_test.cpp  test_GeoCoord.cpp  test_lla_to_ecef.cpp
test/LinAlg/: CMakeLists.txt  MatrixMath_test.cpp  Matrix_test.cpp  README.md  VectorMath_test.cpp  Vector_test.cpp  test_Matrix.cpp  test_MatrixMath.cpp  test_Quaternion.cpp  test_Vector.cpp  test_VectorMath.cpp  test_VectorOperators.cpp
test/TestTools/: Euler321Near.cpp  Euler321Near.h  GeoCoordNear.cpp  GeoCoordNear.h  MatrixNear.h  QuaternionNear.cpp  QuaternionNear.h  VectorNear.h
